--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/crud-demo?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/crud-demo-2?useSSL=false
 spring.datasource.username = root
 spring.datasource.password =
 
